GPII-226: Fixed styling of followingElement adjusters. Also fixed a bug with screenReaderFollows font icons not showing.

--- a/src/shared/adjusters/css/adjusters.css
+++ b/src/shared/adjusters/css/adjusters.css
@@ -1087,7 +1087,7 @@ h4 {
 .gpii-followingElement-container {
     margin-top: 20px;
     background-color: #E5EFEF;
-    margin-left: 30px;
+    //margin-left: 30px;
 }
 
 .fl-preview-A {
